--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full-Screen Image Slider</title>
+    <title>AL KARAMA</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
@@ -13,9 +13,10 @@
     <div class="swiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="img/image 01.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 01.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 01.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 01.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 02.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 03.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 04.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 05.jpg" alt=""></div>
         </div>
     </div>
     <script src="script.js"></script>
