--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="swiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/image 01.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 02.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 03.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 04.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 01.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 03.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 04.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 05.jpg" alt=""></div>
         </div>
     </div>
@@ -24,7 +24,7 @@
     <script>
         const swiper = new Swiper('.swiper', {
             // Optional parameters
-            direction: 'vertical',
+            direction: 'horizontal',
             loop: true,
             spaceBetween: 30,
             centeredSlides: true,
