--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
     <div class="swiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="img/image 01.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/00.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/01.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/02.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/04.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/05.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 03.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 04.png" alt=""></div>
@@ -33,6 +37,7 @@
                 disableOnInteraction: false,
             },
         });</script>
+      
 </body>
 
 </html>
