--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="swiper-slide"><img src="img/00.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/01.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/02.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/03.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/04.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/05.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
