--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="swiper-slide"><img src="img/03.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/04.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/05.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 01.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 03.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 04.png" alt=""></div>
