--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
             <div class="swiper-slide"><img src="img/00.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/01.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/02.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/give.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/give1.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/03.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/04.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/give.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/05.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/give.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/image 01.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 03.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/give.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/give1.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/image 04.png" alt=""></div>
             <div class="swiper-slide"><img src="img/image 05.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/give1.jpg" alt=""></div>
         </div>
     </div>
     <script src="script.js"></script>
