--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="swiper">
         <div class="swiper-wrapper">
-      
+              <div class="swiper-slide"><img src="img/giv.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/giv1.jpg" alt=""></div>
         </div>
     </div>
     <script src="script.js"></script>
