--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <div class="swiper-wrapper">
               <div class="swiper-slide"><img src="img/giv.jpg" alt=""></div>
             <div class="swiper-slide"><img src="img/giv1.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/25.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 01.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/giv.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/25.jpg" alt=""></div>
+             <div class="swiper-slide"><img src="img/image 03.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/giv1.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/image 04.png" alt=""></div>
+            <div class="swiper-slide"><img src="img/25.jpg" alt=""></div>
         </div>
     </div>
     <script src="script.js"></script>
