--- a/index.html
+++ b/index.html
@@ -1,45 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AL KARAMA</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * { box-sizing: border-box; }
+        body { font-family: Verdana, sans-serif; }
+        .mySlides { display: none; }
+        img { vertical-align: middle; height: 750px; }
+
+        /* Slideshow container */
+        .slideshow-container {
+            position: relative;
+            margin: auto;
+        }
+
+        /* Caption text */
+        .text {
+            color: #fff; 
+            font-size: 15px;
+            padding: 8px 12px; 
+            position: absolute; 
+            bottom: 8px; 
+            left: 16px; 
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            border-radius: 4px;
+        }
+
+        /* Dots */
+        .dot {
+            height: 15px;
+            width: 15px;
+            margin: 0 2px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+        }
+
+        .active {
+            background-color: #717171;
+        }
+
+        /* Fading animation */
+        .fade {
+            animation-name: fade;
+            animation-duration: 1.5s;
+        }
+
+        @keyframes fade {
+            from { opacity: .4; } 
+            to { opacity: 1; }
+        }
+
+        /* On smaller screens, decrease text size */
+        @media only screen and (max-width: 300px) {
+            .text { font-size: 11px; }
+        }
+    </style>
 </head>
-
 <body>
-    <div class="swiper">
-        <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/giv.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/giv1.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/25.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 01.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/giv.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 02.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/25.jpg" alt=""></div>
-             <div class="swiper-slide"><img src="img/image 03.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/giv1.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/image 04.png" alt=""></div>
-            <div class="swiper-slide"><img src="img/25.jpg" alt=""></div>
-        </div>
-    </div>
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-        const swiper = new Swiper('.swiper', {
-            // Optional parameters
-            direction: 'horizontal',
-            loop: true,
-            spaceBetween: 30,
-            centeredSlides: true,
-            autoplay: {
-                delay: 5000,
-                disableOnInteraction: false,
-            },
-        });</script>
-      
-</body>
 
+<center>
+    <div class="slideshow-container">
+
+        <div class="mySlides fade">
+            <img src="./1 (1).jpg" class="nan">
+            <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="./1 (2).jpg" class="nan">
+            <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="1 (3).jpg" class="nan">
+            <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="./1 (4).jpg" class="nan">
+            <div class="text">Caption Four</div>
+        </div>
+        
+    </div>
+</center>
+<br>
+
+<div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> <!-- Added a dot for the new slide -->
+</div>
+
+<script>
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    let i;
+    let slides = document.getElementsByClassName("mySlides");
+    let dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) { slideIndex = 1; }    
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex - 1].style.display = "block";  
+    dots[slideIndex - 1].className += " active";
+    setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
+</body>
 </html>
